policies/mutate/inject-sealed-secret-mpol/.chainsaw-test/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: sealed-secret-config
  namespace: default
data:
  env_name: PROTECTED_SECRET
  secret_name: sealed-secret
  secret_key: secret
  volume_name: sealed-secret-volume
  mount_path: /sealed/myvalue
