policies/mutate/inject-sealed-secret-mpol/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: inject-sealed-secret-config
spec:
  template: false
  timeouts:
    apply: 30s
    assert: 30s
    delete: 15s
  steps:
  - name: step-01-install-policy
    try:
    - apply:
        file: ../inject-sealed-secret-config.yaml
    - assert:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: MutatingPolicy
          metadata:
            name: inject-sealed-secret-config
          status:
            conditionStatus:
              (conditions[?type == 'WebhookConfigured']):
              - message: Webhook configured.
                reason: Succeeded
                status: "True"
                type: WebhookConfigured
              (conditions[?type == 'RBACPermissionsGranted']):
              - message: Policy is ready for reporting.
                reason: Succeeded
                status: "True"
                type: RBACPermissionsGranted
              (length(conditions)): 2
              ready: true
  - name: step-02-create-configmap
    try:
    - apply:
        file: configmap.yaml
    - assert:
        file: configmap.yaml
  - name: step-03-test-valid-pod-with-containers
    try:
    - apply:
        file: good-pod.yaml
    - assert:
        file: expected-pod.yaml
  - name: step-04-test-pod-without-coco-label
    try:
    - apply:
        file: bad-pod-no-label.yaml
    - assert:
        file: bad-pod-no-label.yaml
  - name: step-05-test-pod-without-annotation
    try:
    - apply:
        file: bad-pod-no-annotation.yaml
    - assert:
        file: bad-pod-no-annotation.yaml
  - name: step-06-test-pod-with-empty-annotation
    try:
    - apply:
        file: bad-pod-empty-annotation.yaml
    - assert:
        file: bad-pod-empty-annotation.yaml
